2008-12-30  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4/acx_pthread.m4:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* m4 (added):
	* m4/acx_pthread.m4 (added):
	  Detect pthreads.

2008-12-27  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Use more automake features.

	* src/Makefile.am:
	  No need to override build order.

2008-12-26  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Run 'autoupdate' on configure.ac.

2008-12-13  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/module.c:
	* dllwrapper/wine/resource.c:
	  Comment out more traceing.

	* libbml.pc.in:
	  Don't add lib specific include dir.

2008-12-04  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* src/Makefile.am:
	  Only build & link dllwrapper on x86.

	* src/BuzzMachineLoader/dsplib.h:
	  __fastcall is x86 only.

	* src/bmltest_info.c:
	  whitespace.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/Makefile.am:
	* src/Makefile.am:
	  Also remove comments now that we changed it.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper/wine/Makefile.am:
	* dllwrapper/wine/module.c:
	* src/Makefile.am:
	  Have windows dlls in $prefix/lib/win32 instead of $prefix/lib.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	  Check for libm and libdl. The libdl part should fix #2367633.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/Makefile.am:
	  Only install dll on x86.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* +   dllwrapper (added):
	* dllwrapper1 (deleted):
	* dllwrapper1/libwin32.h (deleted):
	* dllwrapper1/wine (deleted):
	* dllwrapper1/wine/winuser.h (deleted):
	* dllwrapper1/wine/poppack.h (deleted):
	* dllwrapper1/wine/afl.c (deleted):